--- a/index.html
+++ b/index.html
@@ -1,59 +1,306 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="index-header">
-      <nav class="nav-main">
-        <ul class="nav-main__list">
-          <li class="nav-main__item">
-            <a href="index.html" class="nav-main__link">Home</a>
-          </li>
-          <li class="nav-main__item">
-            <a href="alta.html" class="nav-main__link">Alta</a>
-          </li>
-          <li class="nav-main__item">
-            <a href="contact-us.html" class="nav-main__link">Contacto</a>
-          </li>
-          <li class="nav-main__item">
-            <a href="about.html" class="nav-main__link">Nosotros</a>
-          </li>
-        </ul>
-      </nav>
-      <nav class="nav-menu">
-        <ul class="nav-menu__list">
-          <li class="nav-menu__logo">
-            <a
-              href="index.html"
-              class="nav-menu__link"
-            >
-            <span class="type"><span>Connecticut</span></span> 
-              
-            </a>
-          </li>
-          <li class="nav-menu__search">
-            <form action="submit">
-              <input type="text" name="search" id="search-input">
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+    <header class="main-header">
+
+        <input type="checkbox" id="menu">
+
+        <nav class="nav-bar">
+            <ul class="nav-bar__nav-list">
+                <li class="nav-bar__nav-item">
+                    <a class="nav-bar__nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-bar__nav-item">
+                    <a class="nav-bar__nav-link" href="alta.html">Alta</a>
+                </li>
+                <li class="nav-bar__nav-item">
+                    <a class="nav-bar__nav-link" href="contacto.html">Contacto</a>
+                </li>
+                <li class="nav-bar__nav-item">
+                    <a class="nav-bar__nav-link" href="nosotros.html">Nosotros</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="search-bar">
+            <div class="search-bar__logo-container">
+                Logo
+            </div>
+            <form class="search-bar__form-container">
+                <label class="search-bar__form-label" for="busqueda">Buscar</label>
+                <input class="search-bar__form-search" id="busqueda" type="search">
+                <input class="search-bar__form-submit" type="submit" value="Buscar">
             </form>
-            <button type="submit">
-              🔎
-            </button>
-          </li>
-          <li class="nav-menu__cart">
-            <a
-              href="
-                "
-              class="nav-menu__link"
-            >
-              cart
-            </a>
-          </li>
-        </ul>
-      </nav>
+            <div class="search-bar__carrito-container">
+                C
+            </div>
+            <div class="menu-toggle">
+                <label class="menu-toggle__label" for="menu">
+                    <span class="menu-toggle__top-bread"></span>
+                    <span class="menu-toggle__meat"></span>
+                    <span class="menu-toggle__bottom-bread"></span>
+                </label>
+            </div>
+        </div>
     </header>
-  </body>
+    <main>
+        <section class="section-cards">
+
+            <header class="section-cards__header">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Se encontraron X productos</p>
+            </header>
+
+            <div class="cards-container">
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/auriculares-sony.jpg" alt="Auriculares Sony">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="#" class="card">
+                    <article class="card__article">
+                        <div class="card__image-container">
+                            <img class="card__image" src="img/productos/apple-iphone-11-pro-max.jpg" alt="iPhone 11 Pro Max">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="card__heading">TV</h2>
+                            <div class="card__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+
+            </div>
+        </section>
+    </main>
+    <footer></footer>
+</body>
 </html>
