--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </ul>
       </nav>
       <div class="search-bar">
-        <div class="search-bar__logo-container">Connecticut</div>
+        <div class="search-bar__logo-container"><span class="type"><span>Connecticut</span></span> </div>
         <form class="search-bar__form-container">
           <label class="search-bar__form-label" for="busqueda">Buscar</label>
           <input class="search-bar__form-search" id="busqueda" type="search" />
-          <input class="search-bar__form-submit" type="submit" value="Buscar" />
+          <input class="search-bar__form-submit" type="submit" value="🔎" />
         </form>
         <div class="search-bar__carrito-container">🛒</div>
         <div class="menu-toggle">
